week 2 task changed

--- a/pythontraining/template/about.html
+++ b/pythontraining/template/about.html
@@ -76,7 +76,8 @@ body {
 <div class="topnav" id="myTopnav">
   <a href="/about" class="active">Home</a>
   <a href="/task">Task</a>
-  <a href="/details">Details</a>
+  <!--<a href="/details">Details</a>-->
+  <a href="/logout">Logout</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
