--- a/pythontraining/template/admin.html
+++ b/pythontraining/template/admin.html
@@ -111,8 +111,8 @@ button:hover {
 <div class="topnav" id="myTopnav">
   <a href="/">Home</a>
   <!--<a href="task.html">News</a>-->
-  <a href="#" class="active">Login</a>
-  <!--<a href="details.html">About</a>-->
+  <a href="#" class="active">Admin</a>
+    <!--<a href="details.html">About</a>-->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
