--- a/pythontraining/template/home.html
+++ b/pythontraining/template/home.html
@@ -73,6 +73,8 @@ body {
 <div class="topnav" id="myTopnav">
   <a href="/home" class="active">Home</a>
   <!--<a href="task.html">News</a>-->
+  <a href="/adminlogin">Admin</a>
+  <a href="/signup">Sign Up</a>
   <a href="/login">Login</a>
   <!--<a href="details.html">About</a>-->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
