--- a/pythontraining/template/todo.html
+++ b/pythontraining/template/todo.html
@@ -73,7 +73,7 @@ body {
   <a href="/about">Home</a>
   <a href="/task" >Tasks</a>
   <a href="/view" class="active">Todo</a>
-  <a href="/details">Details</a>
+  <!--<a href="/details">Details</a>-->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
