--- a/pythontraining/template/task.html
+++ b/pythontraining/template/task.html
@@ -133,8 +133,8 @@ input[type=submit] {
 <div class="topnav" id="myTopnav">
   <a href="/about">Home</a>
   <a href="/task" class="active">Tasks</a>
-  <!--<a href="login.html">Contact</a>-->
-  <a href="/details">Details</a>
+  <!--<a href="login.html">Contact</a>
+  <a href="/details">Details</a>-->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
