--- a/pythontraining/template/admin.html
+++ b/pythontraining/template/admin.html
@@ -111,7 +111,10 @@ button:hover {
 <div class="topnav" id="myTopnav">
   <a href="/">Home</a>
   <!--<a href="task.html">News</a>-->
-  <a href="#" class="active">Admin</a>
+  <a href="/adminsignup" class="active">Admin SignUp</a>
+  <a href="/signup">Sign Up</a>
+  <a href="/login">Login</a>
+  <a href="/adminlogin" >Admin Login</a>
     <!--<a href="details.html">About</a>-->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -119,7 +122,7 @@ button:hover {
 </div>
 
 <div style="padding-left:16px">
-    <form action="/adminlogin" method="post">
+    <form action="/adminsignup" method="post">
     <div class="container">
       <div class="form-group">
         <label for="aname">Admin Name:</label><input type="text" name="aname"> 
