--- a/pythontraining/template/signup.html
+++ b/pythontraining/template/signup.html
@@ -110,8 +110,10 @@ button:hover {
 <div class="topnav" id="myTopnav">
   <a href="/">Home</a>
   <!--<a href="task.html">News</a>-->
+  <a href="/adminsignup">Admin SignUp</a>
   <a href="/signup" class="active">Sign Up</a>
   <a href="/login" >Login</a>
+  <a href="/adminlogin" >Admin Login</a>
   <!--<a href="details.html">About</a>-->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
