--- a/pythontraining/template/todo.html
+++ b/pythontraining/template/todo.html
@@ -69,15 +69,15 @@ body {
 </head>
 <body>
 
-<div class="topnav" id="myTopnav">
+<!-- <div class="topnav" id="myTopnav">
   <a href="/about">Home</a>
   <a href="/task" >Tasks</a>
   <a href="/view" class="active">Todo</a>
-  <!--<a href="/details">Details</a>-->
+  <a href="/logout">Logout</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
-</div>
+</div> -->
 
 <div>
     <h3>Task Schedule</h3>
@@ -87,7 +87,8 @@ body {
         <th>Task ID</th>  
         <th>Title</th>  
         <th>Date</th>  
-        <th>Description</th>  
+        <th>Description</th> 
+        <th>UserID</th> 
     </tr>  
   </thead> 
     {% for row in rows %}  
@@ -97,6 +98,7 @@ body {
             <td>{{row["todo"]}}</td>  
             <td>{{row["datime"]}}</td>  
             <td>{{row["details"]}}</td> 
+            <td>{{row["uid"]}}</td>
         </tr>  
       
     {% endfor %}  
