--- a/pythontraining/template/login.html
+++ b/pythontraining/template/login.html
@@ -2,15 +2,81 @@
  <head>
   <link rel="stylesheet" href="/static/style.css" type="text/css">
  </head> 
+ <style>
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+ </style>
+
  <body>
-&#123;% block body %&#125;
-
-
+   {% block body %}
+   
+<div class="topnav" id="myTopnav">
+  <a href="/" >Home</a>
+  <!--<a href="task.html">News</a>-->
+  <a href="/adminsignup">Admin SignUp</a>
+  <a href="/signup">Sign Up</a>
+  <a href="/login" class="active">Login</a>
+  <a href="/adminlogin" >Admin Login</a>
+  <!--<a href="details.html">About</a>-->
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
 <form action="/login" method="POST">
 <div class="login">
 <div class="login-screen">
 <div class="app-title">
 <h1>Login</h1>
+<p>{{error}}</p>
 </div>
 <div class="login-form">
 <div class="control-group">
@@ -19,15 +85,23 @@
 <div class="control-group">
 				<input type="password" class="login-field" value="" placeholder="password" name="psw">
 <label class="login-field-icon fui-lock" for="login-pass"></label></div>
-<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block">
+<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block" onsubmit="return validateForm()">
 
-<div class="container" style="background-color:#f1f1f1">
-  <button type="button" class="cancelbtn">Cancel</button>
-</div>
+
 </div>
 </div>
 </div>
 </form>
-&#123;% endblock %&#125;
+<script>
+function validateForm() {
+  var x = document.forms["myForm"]["uname"].value;
+  var y = document.forms["myForm"]["psw"].value;
+  if (x == "" || y == "") {
+    alert("Values must be filled out");
+    return false;
+  }
+  }</script>
+{% endblock %}
+
 </body>
 </html>
