--- a/pythontraining/template/adminsearch.html
+++ b/pythontraining/template/adminsearch.html
@@ -72,91 +72,52 @@ body {
     <h1>TodoApp</h1>
     <p>Home Page</p> 
     <p>{{username}}</p>
-    <p>{{msg}}</p>
   </div>
 <div class="topnav" id="myTopnav">
   <a href="/about">Home</a>
-  <a href="/details" class="active">Details</a>
-  <a href="/adminsearch">Search users</a>
+  <a href="/details" >Details</a>
+  <a href="/adminsearch" class="active">Search users</a>
   <a href="/logout">Logout</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
 </div>
+<form action="/adminsearch" method="GET">
+  <div class="form-group">
+      <label for="vocab">Type the keyword to search for user information:</label>
+      <input type="text" id="vocab" name="vocab" placeholder="Your keyword">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+  {{keyword}}
+</form>
+   
+</div>
 
 <div>
-    <h3>Intern Details</h3>  
+    <h3>Intern Details</h3> <br> 
+    {{ pagination.links }}
 <table border=5 class="table table-hover">  
   <thead>
     <tr>
-        <th>Intern ID</th>  
-        <th>Username</th>  
-        <th>Email</th>  
-        <th>Address</th>
-        <th>No. of Todos</th>  
-    </tr>  
-    </thead>  
-    {% for row in rows %}  
-      
-        <tr>  
-            <td>{{row["uid"]}}</td>  
-            <td>{{row["uname"]}}</td>  
-            <td>{{row["email"]}}</td>  
-            <td>{{row["address"]}}</td> 
-            <td>{{row["count(Tasks.tid)"]}}</td>
-        </tr>  
-      
-    {% endfor %}  
+      <th>Result No.</th>
+      <th>Username</th>  
+      <th>Task title</th>
+      <th>Task description</th>
+  </tr>  
+  </thead>  
+  {% for i in users %}
+          <tr>
+              {% if i< total %}
+           <td>{{ loop.index + (page - 1) * per_page }}</td>
+            <td>{{ rows[i][0] }}</td>
+            <td>{{ rows[i][1]}}</td>
+            <td>{{ rows[i][2]}}</td>
+              {% endif %}
+          {% endfor %}
+          </tr> 
 </table>  
-<br><br>  
+<br>{{ pagination.links }}<br>  
 </div>
-
-<div>
-  <h3>Add new user</h3>
-  <form action="/adduser" method="post">
-    <div class="container">
-      <div class="form-group">
-        <label for="uname">Name:</label><input type="text" name="uname" required> 
-      </div>
-      <div class="form-group">
-        <label for="email">Email:</label><input type="email" name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="address">Address:</label><input type="text" name="address">
-      </div>
-      <div class="form-group">
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-      </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form> 
-</div>
-
-<div>
-  <h3>Remove Intern from the list</h3>  
-    
-  <form action="/remove" method="post">  
-  Intern Id:<input type="text" name="uid">  
-  <input type="submit" value="Submit">  
-  </form>
-  <br><br>  
-  </div>
-  
-  <div>
-    <h3>Update Intern from the list</h3>  
-      
-    <form action="/edit" method="post">  
-    Intern Id:<input type="text" name="uid"> 
-    Username:<input type="text" name="uname">
-    Email:<input type="email" name="email">
-    Address:<input type="text" name="address">
-    Password:<input type="password" placeholder="Enter Password" name="psw">
-    Submit<input type="submit" value="Submit">  
-    </form>  
-    </div>
-    <div>
-      <button onclick="window.open('/view')" class="btn-default">Todo</button>
-    </div>
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
